methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:38: error: method dessineLigne has return statement; needs result type
    case 2 => dessineLigne1(n); return (n+1)
                                ^